--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=challenge
+spring.datasource.url=jdbc:mysql://localhost:3306/challenge
+spring.datasource.username=root
+spring.datasource.password=fishKekse
+spring.jpa.show-sql = true
